Update v2 build pipeline (#1919)
* Change devX API endpoint for v2.

* Create PRs in AzDo.

* Adds steps to create-pr template.

* Adds SkipOpenAPIDocsDownload condition.

* Skip build when ModulesWithChanges is empty.

* Handle SkipOpenAPIDocsDownload as string.

* Add head branch

* Bump versions of credscan and policheck

* Update post build security checks

* Use .NET 6 for ESRP signing

* Use default code sign options.

* Suppress examples folder for cred scan

* Add cred scan suppressions file

* Remove v1 SDK modules

* Add DeviceManagement.Actions examples to credscan suppression file

* Disable PoliCheck

* Add PoliCheck exclusions.

* Exclude generated examples from poli check

* Set path to policheck exclusion

* Move compliance task config to scripts folder

* Use fully qualified paths

* Build all modules

--- a/.azure-pipelines/common-templates/download-openapi-docs.yml
+++ b/.azure-pipelines/common-templates/download-openapi-docs.yml
@@ -10,6 +10,9 @@ parameters:
     displayName: Build Agent
   - name: SkipForceRefresh
     type: string
+  - name: SkipOpenAPIDocsDownload
+    type: boolean
+    default: false
 
 steps:
   - template: ./checkout.yml
@@ -39,6 +42,7 @@ steps:
 
   - task: PowerShell@2
     displayName: Download v1.0 OpenApi docs
+    condition: and(succeeded(), eq('${{ parameters.SkipOpenAPIDocsDownload }}', false))
     continueOnError: false
     inputs:
       filePath: "$(System.DefaultWorkingDirectory)/tools/UpdateOpenApi.ps1"
@@ -47,6 +51,7 @@ steps:
 
   - task: PowerShell@2
     displayName: Download beta OpenApi docs
+    condition: and(succeeded(), eq('${{ parameters.SkipOpenAPIDocsDownload }}', false))
     continueOnError: false
     inputs:
       filePath: "$(System.DefaultWorkingDirectory)/tools/UpdateOpenApi.ps1"
@@ -60,15 +65,21 @@ steps:
       pwsh: true
       targetType: "inline"
       script: |
-        $diff = git diff --name-only
-        $ModulesWithChanges = @{}
-        $diff | %{
-          if (($_ -match 'openApiDocs\/(v1.0|beta)\/(.*).yml') -and !$ModulesWithChanges.ContainsKey($matches.2))
-          {
-            $ModulesWithChanges.Add($matches.2, $matches.1)
+        Write-Host "SkipOpenAPIDocsDownload: ${{ parameters.SkipOpenAPIDocsDownload }}"
+        if ('${{ parameters.SkipOpenAPIDocsDownload }}' -eq 'True') {
+          $ModuleNames = "Skipped"
+          Write-Warning "Skipped OpenAPI Docs Download."
+        } else  {
+          $diff = git diff --name-only
+          $ModulesWithChanges = @{}
+          $diff | %{
+            if (($_ -match 'openApiDocs\/(v1.0|beta)\/(.*).yml') -and !$ModulesWithChanges.ContainsKey($matches.2))
+            {
+              $ModulesWithChanges.Add($matches.2, $matches.1)
+            }
           }
+          $ModuleNames = $ModulesWithChanges.Keys
         }
-        $ModuleNames = $ModulesWithChanges.Keys
         Write-Host "##vso[task.setvariable variable=ModulesWithChanges;isOutput=true]$ModuleNames"
 
   - task: PowerShell@2
